<resources>
    <string name="app_name">QuizMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">QuizMe</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="next">Next</string>
    <string name="txtLogin">Login</string>
    <string name="txtGmail">Gmail</string>
    <string name="create_an_account">Create an Account</string>
    <string name="course_name">Course Name</string>
    <string name="questions">Questions:</string>
    <string name="courses">Courses:</string>
    <string name="Username">Username</string>
    <string name="code_qn_string">Questions:</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>