<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".UI.Activities.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="200px"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/dummy_content"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:padding="15dp"
                android:background="@drawable/input_box_text_back"
                android:inputType="textEmailAddress" />
            <EditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:padding="15dp"
                android:background="@drawable/input_box_text_back"
                android:inputType="textEmailAddress" />
            <Button
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/primary_buttons_back"
                android:text="Login"/>
            <Button
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/input_box_text_back"
                android:text="Signup"/>
            <RelativeLayout
                android:id="@+id/google_signIn"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/google_button_back"
                android:layout_height="50dp"
                android:layout_marginRight="5dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/gmail_icon"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/googleg_standard_color_18"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="SignIn with google"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/gmail_icon"
                        android:textSize="20dp"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>